# animystcli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  ralph.sh
animyst/: __init__.py  __main__.py  app.py  cyberpunk.tcss  llm.py
animyst/commands/: __init__.py  dispatcher.py  parser.py
animyst/domain/: __init__.py  models.py
animyst/services/: __init__.py  agent_service.py  chat_service.py  mcp_service.py
animyst/storage/: __init__.py  json_store.py  paths.py  repositories.py
animyst/ui/: __init__.py  formatting.py  modals.py
docs/: automation-approvals.md  implementation-plan.md  index.html  ralph-status.md
docs/ralph-prompts/: 00-baseline.md  00-bootstrap.md  01-domain-storage.md  02-commands-services.md  03-history.md  04-ui-split.md  05-verify-docs.md  10-mcp-binding.md  20-history-ux.md  30-textual-tests.md  40-ralph-hardening.md  50-release-pass.md
docs/ralph-tasks/: 00-baseline.md  00-bootstrap.md  01-domain-storage.md  02-commands-services.md  03-history.md  04-ui-split.md  05-verify-docs.md  10-mcp-binding.md  20-history-ux.md  30-textual-tests.md  40-ralph-hardening.md  50-release-pass.md
tests/: test_chat_service.py  test_commands.py  test_mcp_service.py  test_repositories.py
